--- a/.tekton/pipelinerun.yaml
+++ b/.tekton/pipelinerun.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/on-event: "[pull_request, push]"
 
     # The branch or tag we are targeting (ie: main, refs/tags/*)
-    pipelinesascode.tekton.dev/on-target-branch: "[main, master]"
+    pipelinesascode.tekton.dev/on-target-branch: "[main]"
 
     # Fetch the git-clone task from hub, we are able to reference later on it
     # with taskRef and it will automatically be embedded into our pipeline.
@@ -17,7 +17,7 @@ metadata:
 
     # Use maven task from hub
     #
-     pipelinesascode.tekton.dev/task-1: "maven"
+    # pipelinesascode.tekton.dev/task-1: "maven"
 
     # You can add more tasks by increasing the suffix number, you can specify them as array to have multiple of them.
     # browse the tasks you want to include from hub on https://hub.tekton.dev/
@@ -40,7 +40,7 @@ spec:
       - name: revision
     workspaces:
       - name: source
-      # - name: basic-auth
+      - name: basic-auth
     tasks:
       - name: fetch-repository
         taskRef:
@@ -49,8 +49,8 @@ spec:
         workspaces:
           - name: output
             workspace: source
-          #- name: basic-auth
-          # workspace: basic-auth
+          - name: basic-auth
+            workspace: basic-auth
         params:
           - name: url
             value: $(params.repo_url)
@@ -84,6 +84,6 @@ spec:
             storage: 1Gi
   # This workspace will inject secret to help the git-clone task to be able to
   # checkout the private repositories
-  # - name: basic-auth
-  #  secret:
-  #    secretName: "{{ git_auth_secret }}"
+  - name: basic-auth
+    secret:
+      secretName: "{{ git_auth_secret }}"
